@@ -1,5 +1,6 @@
 22-04-08 Xavier Perseguers <xavier@perseguers.ch>
 	* added caching mechanism
+	* removed protected pages from feeds
 
 20-03-08 Xavier Perseguers <xavier@perseguers.ch>
 	* added retrieval and use of page author's name/email
